// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audio block renders audio block error state without crashing 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="box-none"
    style={
      Array [
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          undefined,
          undefined,
          undefined,
        ]
      }
    />
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": 44,
        }
      }
    >
      <View>
        Svg
      </View>
      <View
        style={Object {}}
      >
        <Text>
          59IrU0WJtq
        </Text>
        <View>
          Svg
          <Text
            style={Object {}}
          >
            Failed to insert audio file. Please tap for options.
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": 44,
        },
        false,
      ]
    }
  >
    <View
      accessibilityLabel="Audio caption. Empty"
      accessibilityRole="button"
      accessible={true}
      style={
        Object {
          "display": "none",
          "flex": 1,
        }
      }
    >
      <View>
        <TextInput
          accessibilityLabel="Text input. Empty"
          activeFormats={Array []}
          allowFontScaling={true}
          blockType={
            Object {
              "tag": "p",
            }
          }
          deleteEnter={true}
          disableEditingMenu={false}
          fontFamily="serif"
          fontSize={14}
          isMultiline={false}
          maxImagesWidth={200}
          onBlur={[Function]}
          onChange={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onPaste={[Function]}
          onSelectionChange={[Function]}
          placeholder="Add caption"
          placeholderTextColor="gray"
          rejectResponderTermination={true}
          textAlign="center"
          triggerKeyCodes={Array []}
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Audio block renders audio file without crashing 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="box-none"
    style={
      Array [
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          undefined,
          undefined,
          undefined,
        ]
      }
    />
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": 44,
        }
      }
    >
      <View>
        Svg
      </View>
      <View
        style={Object {}}
      >
        <Text>
          59IrU0WJtq
        </Text>
        <View>
          <Text
            style={Object {}}
          >
            MP3 audio file
          </Text>
        </View>
      </View>
      <View
        accessibilityHint="Double tap to listen the audio file"
        accessibilityLabel="Audio Player"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            Object {
              "color": "white",
            }
          }
        >
          OPEN
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": 44,
        },
        false,
      ]
    }
  >
    <View
      accessibilityLabel="Audio caption. Empty"
      accessibilityRole="button"
      accessible={true}
      style={
        Object {
          "display": "none",
          "flex": 1,
        }
      }
    >
      <View>
        <TextInput
          accessibilityLabel="Text input. Empty"
          activeFormats={Array []}
          allowFontScaling={true}
          blockType={
            Object {
              "tag": "p",
            }
          }
          deleteEnter={true}
          disableEditingMenu={false}
          fontFamily="serif"
          fontSize={14}
          isMultiline={false}
          maxImagesWidth={200}
          onBlur={[Function]}
          onChange={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onPaste={[Function]}
          onSelectionChange={[Function]}
          placeholder="Add caption"
          placeholderTextColor="gray"
          rejectResponderTermination={true}
          textAlign="center"
          triggerKeyCodes={Array []}
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Audio block renders placeholder without crashing 1`] = `
<View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityHint="Double tap to select an audio file"
      accessibilityLabel="Audio block. Empty"
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Array [
            undefined,
            undefined,
            undefined,
          ],
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "fill": "gray",
          }
        }
      >
        <View
          style={Object {}}
        >
          Svg
        </View>
      </View>
      <Text>
        Audio
      </Text>
      <Text>
        ADD AUDIO
      </Text>
    </View>
  </View>
</View>
`;
